<resources>
    <string name="app_name">Bantumi</string>

    <string name="txtPlayer1">Jugador 1</string>
    <string name="txtPlayer2">Jugador 2</string>
    <string name="txtBtnReset">Reset</string>

    <!-- Valores del juego -->
    <integer name="intNumInicialSemillas">4</integer>
    <string name="txtInitialScore">0</string>

    <!-- Mensaje opción sin implementar -->
    <string name="txtSinImplementar">¡No implementado aún!</string>

    <!-- Opciones -->
    <string name="txtReiniciarPartida">Reiniciar</string>
    <string name="txtOpcionGuardar">Guardar Partida</string>
    <string name="txtOpcionRecuperar">Recuperar Partida</string>
    <string name="txtOpcionMejoresResultados">Mejores Resultados</string>

    <!-- Acerca de -->
    <string name="aboutText">Acerca de</string>
    <string name="aboutTitle">¿Cómo se juega?</string>
    <string name="aboutMessage"><p>Cada jugador elige una de sus 6 casillas -que no puede estar vacía-, recoge
        todas las semillas que contenga y las “siembra” una a una en sentido contrario a las agujas del reloj
        en las siguientes casillas del tablero (excepto en el almacén del oponente). Se aplican las siguientes reglas:</p>
        <ul>
            <li>Si la siembra termina en el almacén propio, el jugador vuelve a tener el turno</li>
            <li>Si la siembra termina en una casilla propia que estuviera vacía, se lleva al almacén
                propio la última semilla y las que hubiera en la casilla opuesta del otro jugador</li>
            <li>El juego termina en el momento en que cualquiera de los dos jugadores tenga todas sus
                casillas vacías. Si el contrario dispone de semillas, éstas pasarán al almacén del propietario
                de las casillas</li>
        </ul>
        <p>Gana el jugador que consiga en su almacén el mayor número de semillas</p>
    </string>

    <!-- Preferencias -->
    <string name="preferencesText">Ajustes</string>
    <string name="prefTituloCategoria1">Datos personales</string>
    <string name="prefTituloNombreJugador">Nombre del jugador</string>
    <string name="prefTextoNombreJugador">Pulse para teclear el nombre del jugador</string>
    <string name="prefTituloCategoria2">Ajustes del juego</string>
    <string name="prefTituloCategoria3">Más información…</string>

    <!-- Diálogo Final -->
    <string name="txtDialogoFinalTitulo">Fin del juego</string>
    <string name="txtDialogoFinalPregunta">¿Desea jugar otra partida?</string>
    <string name="restartDialogTitle">Reiniciar</string>
    <string name="restartDialogMessage">¿Estás seguro de que quieres reiniciar la partida?</string>
    <string name="txtSaveConfiguration">Guardar</string>
    <string name="txtResetConfiguration">Reset</string>
    <string name="savedGamesFileName">saved_games</string>
    <string name="txtGameSaved">Partida guardada</string>
    <string name="saveGameDialogTitle">Guardar</string>
    <string name="saveGameDialogMessage">¿Deseas guardar la partida?</string>
    <string name="txtRestartedGame">Partida reiniciada</string>
    <string name="restoreGameDialogTitle">Recuperar Partida</string>
    <string name="restoreGameDialogMessage">¿Deseas sobreescribir la partida actual con la partida guardada?</string>
    <string name="noSavedGameMessage">No hay ninguna partida guardada.</string>
    <string name="txtRestoredGame">Partida recuperada!</string>
    <string name="prPlayerNameKey">player_name</string>
    <string name="prPlayerNameEVTitle">Player name</string>
    <string name="prInitialSeedNumberKey">initial_seed_number</string>
    <string name="prInitialSeedNumberEVTitle">Semillas iniciales</string>
    <string name="prSBSeedShouldBeNumberText">Las semillas iniciales deben ser un número.</string>
    <string name="rvResultDateTitle">Fecha</string>
    <string name="rvResultWinnerTitle">Ganador</string>
    <string name="rvResultWinnerSeedNumberTitle">Semillas (G)</string>
    <string name="rvResultGameTieTitle">Empate?</string>
    <string name="txtNo">No</string>
    <string name="txtYes">Si</string>
    <string name="txtBorrarTodo">Borrar todo</string>
    <string name="prFirstMovementText">Primer movimiento</string>
    <string name="prFirstMovementKey">listPreferences</string>
    <string name="resetGameWithNewPreferences">Se ha modificado la partida con las nuevas preferencias.</string>
    <string name="resetNextGameWithNewPreferences">Se aplicaran los cambios en la próxima partida.</string>
    <string name="initialTimerValue">00:00</string>
    <string name="rvGameDurationTitle">Duración</string>
    <string name="deleteAllResults">¿Deseas borrar todos los resultados?</string>
    <string name="deleteAllResultsTitle">Borrar todo</string>

</resources>