<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:key="@string/prPlayerNameKey"
        app:title="@string/prPlayerNameEVTitle"
        app:defaultValue="@string/txtPlayer1"
        app:useSimpleSummaryProvider="true"
        />
    <EditTextPreference
        android:defaultValue="4"
        android:key="@string/prInitialSeedNumberKey"
        android:singleLine="true"
        android:title="@string/prInitialSeedNumberEVTitle"
        app:useSimpleSummaryProvider="true" />
    <ListPreference
        android:entries="@array/turn_entries"
        android:entryValues="@array/turn_values"
        android:key="@string/prFirstMovementKey"
        android:title="@string/prFirstMovementText" />
</PreferenceScreen>